--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "http-server": "^0.9.0"
+    "babel-core": "^5.8.23"
   },
   "devDependencies": {
-    "jshint": "^2.9.1",
+	"jshint": "^2.9.1",
     "sass-lint": "^1.5.0"
   }
+
 }
