--- a/bower.json
+++ b/bower.json
@@ -13,9 +13,7 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "~2.1.4",
-    "mocha": "~2.4.5",
-    "chai": "~3.5.0"
+    "jquery": "~2.1.4"
   },
   "description": "A task given by Telerik",
   "main": "",
