--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "http-server": "^0.9.0"
+    "chai": "^3.5.0",
+    "http-server": "^0.9.0",
+    "mocha": "^2.4.5"
   },
   "devDependencies": {
     "jshint": "^2.9.1",
