--- a/package.json
+++ b/package.json
@@ -10,11 +10,22 @@
   "license": "ISC",
   "dependencies": {
     "chai": "^3.5.0",
+    "chai-jquery": "^2.0.0",
     "http-server": "^0.9.0",
+    "karma": "^0.13.22",
+    "karma-chai": "^0.1.0",
+    "karma-chai-jquery": "^1.0.0",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-cli": "^0.1.2",
+    "karma-firefox-launcher": "^0.1.7",
+    "karma-ie-launcher": "^0.2.0",
+    "karma-jquery": "^0.1.0",
+    "karma-mocha": "^0.2.2",
     "mocha": "^2.4.5"
   },
   "devDependencies": {
     "jshint": "^2.9.1",
+    "karma-mocha": "^0.2.2",
     "sass-lint": "^1.5.0"
   }
 }
