--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "karma-ie-launcher": "^0.2.0",
     "karma-jquery": "^0.1.0",
     "karma-mocha": "^0.2.2",
-    "mocha": "^2.4.5"
+    "karma-sinon": "^1.0.4",
+    "karma-sinon-chai": "^1.2.0",
+    "lolex": "^1.4.0",
+    "mocha": "^2.4.5",
+    "sinon": "^1.17.3",
+    "sinon-chai": "^2.8.0"
   },
   "devDependencies": {
     "jshint": "^2.9.1",
